objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Manual Provisioning</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approve</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Deny</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>New Customer Registration</fullName>
        <description>Review contact info of a new customer and verify his or her identity and relationship with the employer</description>
        <isActive>true</isActive>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Reviewed and Accepted</fullName>
        </values>
        <values>
            <fullName>Reviewed and Denied</fullName>
        </values>
        <values>
            <fullName>Reviewed and Denied%2C Do Not Send Email</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Ag_Tech_Agreement__c</fullName>
        <formula>Related_External_User__r.Ag_Tech_Agreement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ag Tech Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelatedRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Provisioning Request</label>
        <referenceTo>UserProvisioningRequest</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Cart__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cart Application</label>
        <referenceTo>Cart_Application__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_External_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Customer User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>NAME</columns>
        <columns>CONTACT.ACCOUNT</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Ag_Tech_Agreement__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Case.EMS_Provisioning</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>On Hold,Escalated,New</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>BLink_FG_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BLink FG</label>
        <queue>BLink_FG</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CLOSED</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.REASON</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>Customer_Support_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Customer Support</label>
        <queue>EMSCustomer_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Support_Case1</fullName>
        <filterScope>Queue</filterScope>
        <label>Customer_Support</label>
        <queue>Customer_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Support_Failures</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.REASON</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Customer Support-Failures</label>
        <queue>EMSCustomer_Support</queue>
    </listViews>
    <listViews>
        <fullName>DOD_MP_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>DOD_MP</label>
        <queue>DOD_MP</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Default_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Default</label>
        <queue>Default</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMS_Level_3_Support_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>EMS - Level 3 Support</label>
        <queue>EMS_Level_3_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FGI_Admin_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>FGI Admin</label>
        <queue>FGI_Admin</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FOLO_FG_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>RelatedRequest__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPDATEDBY_USER.ALIAS</field>
            <operation>contains</operation>
            <value>gstew</value>
        </filters>
        <label>FOLO FG</label>
    </listViews>
    <listViews>
        <fullName>Feed_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>EMS - Purina</label>
        <queue>Feed</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Feed_FG_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Feed_FG</label>
        <queue>Feed_FG</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Invoice_Mgmt_FG_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Invoice Mgmt FG</label>
        <queue>Invoice_Mgmt_FG</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LoL_Maiden_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>EMS - Dairy Foods</label>
        <queue>LoL_Maiden</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>EMS_Provisioning</fullName>
        <active>true</active>
        <businessProcess>Manual Provisioning</businessProcess>
        <description>Provision requested access on the target application</description>
        <label>EMS Provisioning</label>
    </recordTypes>
    <recordTypes>
        <fullName>RegistrationReview</fullName>
        <active>true</active>
        <businessProcess>New Customer Registration</businessProcess>
        <description>Review registration request by a new customer</description>
        <label>New Customer Registration</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>EditClosedCase</fullName>
        <active>true</active>
        <description>Once Case Is Closed, Cannot Edit The Case Fields.</description>
        <errorConditionFormula>AND( PRIORVALUE( IsClosed ) = True, $Profile.Name != &quot;System Administrator&quot;)</errorConditionFormula>
        <errorMessage>Once Case Is Closed, Cannot Edit The Case Fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_valid_Account</fullName>
        <active>true</active>
        <description>Require the customer Contact record to be linked to a valid Account</description>
        <errorConditionFormula>AND(AND(AND(OR(Contact.Account.Name = &apos;Pending Registrations&apos;,AND(Contact.Account.RecordType.DeveloperName=&apos;System_Account&apos;,Contact.Account.Name &lt;&gt; &apos;Land O Lakes Internal&apos;)),NOT(IsClosed)), RecordType.DeveloperName &lt;&gt; &apos;EMS_Provisioning&apos;), AND(TEXT(Status) &lt;&gt; &apos;New&apos;,TEXT(Status)&lt;&gt; &apos;Reviewed and Denied&apos;))</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Unable to save this case because the customer is not linked to a valid account. To continue, find the right account and associate it with this customer.</errorMessage>
    </validationRules>
</CustomObject>